# direct-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test_comprehensive.py
.github/: copilot-instructions.md
.github/workflows/: api-coverage.yml  claude.yml  quality.yml
direct_cli/: __init__.py  _autotargeting.py  _bidding_strategy.py  _captcha.py  _deprecated.py  _flag_validation.py  _smoke_probes.py  api.py  auth.py  cli.py  i18n.py  output.py  reports_coverage.py  smoke_matrix.py  tracking_params.py  utils.py  v4.py  v4_contracts.py  wsdl_coverage.py
direct_cli/_vendor/tapi_yandex_direct/: __init__.py  endpoints.py  resource_mapping.py  tapi_yandex_direct.py  tapi_yandex_direct.pyi
direct_cli/commands/: __init__.py  _batch.py  _campaigns_base.py  _campaigns_cpm_banner.py  _execute.py  _get.py  _lifecycle.py  adextensions.py  adgroups.py  adimages.py  ads.py  advideos.py  agencyclients.py  audiencetargets.py  auth.py  balance.py  bidmodifiers.py  bids.py  businesses.py  campaigns.py  changes.py  clients.py  creatives.py  dictionaries.py  dynamicads.py  dynamicfeedadtargets.py  feeds.py  keywordbids.py  keywords.py  keywordsresearch.py  leads.py  negativekeywordsharedsets.py  reports.py  retargeting.py  sitelinks.py  smartadtargets.py  strategies.py  trackingparams.py  turbopages.py  v4account.py  (+10 more)
direct_cli/commands/ads/: __init__.py  _cli.py  base.py  batch.py  builder.py  mobile_app.py  objects.py  responsive.py  shopping.py  text.py
direct_cli/translations/: adextensions.json  adgroups.json  adimages.json  ads.json  advideos.json  agencyclients.json  audiencetargets.json  auth.json  balance.json  bidmodifiers.json  bids.json  businesses.json  campaigns.json  changes.json  clients.json  common.json  creatives.json  dictionaries.json  dynamicads.json  dynamicfeedadtargets.json  feeds.json  keywordbids.json  keywords.json  keywordsresearch.json  leads.json  negativekeywordsharedsets.json  reports.json  retargeting.json  sitelinks.json  smartadtargets.json  strategies.json  turbopages.json  v4account.json  v4adimage.json  v4events.json  v4finance.json  v4forecast.json  v4goals.json  v4keywords.json  v4shells.json  (+3 more)
direct_cli/v4/: __init__.py  emit.py  money.py  parse.py
docs/audits/: API_COVERAGE.md  PROJECT_WIRE_SHAPE_AUDIT_2026-05-29.md  PROJECT_WIRE_SHAPE_AUDIT_2026-05-30.md  WIRE_SHAPE_TRIAGE_2026-05-30.md  issue-198-mutating-wsdl-audit.md  wire_shape.json
docs/superpowers/plans/: 2026-04-12-issue-32-completion.md
docs/superpowers/specs/: 2026-04-23-vendor-tapi-yandex-direct-design.md
scripts/: anonymize_cassettes.py  audit_wire_shape.py  build_api_coverage_checklist.py  build_api_coverage_report.py  build_issue55_body.py  build_wsdl_optional_field_audit.py  check_all_docs_urls.py  check_reports_drift.py  check_wsdl_drift.py  measure_criteria_limits.py  patch_vendor_imports.py  preflight_check.sh  probe_drift_urls.sh  refresh_reports_cache.py  refresh_wsdl_cache.py  release_pypi.sh  sandbox_write_audit.py  sandbox_write_live.py  test_dangerous_commands.sh  test_safe_commands.sh  test_sandbox_write.sh  update_vendor.sh
tests/: API_COVERAGE.md  API_ISSUE_AUDIT.md  MANUAL_COVERAGE.md  WSDL_OPTIONAL_FIELD_AUDIT.md  _orphan_store.py  api_coverage_payloads.py  conftest.py  test_adgroups_build_adgroup_object.py  test_adgroups_build_adgroup_update_object.py  test_ads_build_ad_object.py  test_ads_build_ad_update_object.py  test_api_coverage.py  test_audit_wire_shape.py  test_auth_bw.py  test_auth_oauth.py  test_auth_op.py  test_auth_write_json.py  test_autotargeting.py  test_balance.py  test_bidding_strategy_constants.py  test_cassette_integrity.py  test_changes.py  test_check_all_docs_urls.py  test_cli.py  test_cli_contract.py  test_comprehensive.py  test_dry_run.py  test_dry_run_adgroups.py  test_dry_run_ads.py  test_dry_run_bids.py  test_dry_run_campaigns.py  test_dry_run_clients.py  test_dry_run_common.py  test_dry_run_extensions.py  test_dry_run_keywords.py  test_dry_run_shared.py  test_dry_run_strategies.py  test_dry_run_strategy_smart.py  test_dry_run_strategy_text.py  test_dry_run_strategy_unified.py  (+39 more)
tests/cassettes/test_integration_live_write/: test_live_draft_adgroups_add_update_delete.yaml  test_live_draft_adimages_add_get_delete.yaml  test_live_draft_ads_add_update_delete.yaml  test_live_draft_ads_suspend_resume_archive_unarchive.yaml  test_live_draft_advideos_add_get.yaml  test_live_draft_audiencetargets_add_delete.yaml  test_live_draft_audiencetargets_suspend_resume.yaml  test_live_draft_bids_set.yaml  test_live_draft_campaign_create_get_delete.yaml  test_live_draft_creatives_chain_advideo_to_creative.yaml  test_live_draft_dynamicads_add_delete.yaml  test_live_draft_dynamicads_suspend_resume.yaml  test_live_draft_keywordbids_set.yaml  test_live_draft_keywords_add_update_delete.yaml  test_live_draft_keywords_suspend_resume.yaml  test_live_draft_sitelinks_add_get_delete.yaml  test_live_draft_smartadtargets_add_update_delete.yaml  test_live_draft_smartadtargets_suspend_resume.yaml  test_live_draft_v4forecast_lifecycle.yaml  test_live_draft_v4wordstat_lifecycle.yaml  test_v5_live_draft_adgroups_add_update_delete.yaml
tests/cassettes/test_integration_write/: TestWriteAdExtensions.test_add_delete.yaml  TestWriteAdGroups.test_add_update_delete.yaml  TestWriteAdImages.test_add_delete.yaml  TestWriteAds.test_add_text_ad_update_delete.yaml  TestWriteAudienceTargets.test_add_delete.yaml  TestWriteBidModifiers.test_toggle_existing.yaml  (+18 more)
tests/reports_cache/: spec.json
tests/wsdl_cache/: adextensions.xml  adgroups.xml  adimages.xml  ads.xml  advideos.xml  agencyclients.xml  audiencetargets.xml  bidmodifiers.xml  bids.xml  businesses.xml  campaigns.xml  changes.xml  clients.xml  creatives.xml  dictionaries.xml  dynamicfeedadtargets.xml  dynamictextadtargets.xml  feeds.xml  keywordbids.xml  keywords.xml  keywordsresearch.xml  leads.xml  negativekeywordsharedsets.xml  retargetinglists.xml  sitelinks.xml  smartadtargets.xml  strategies.xml  turbopages.xml  vcards.xml
(+60 files in other folders)
