[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "direct-cli"
version = "0.3.4"
description = "Command-line interface for Yandex Direct API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "axisrow"}
]
keywords = ["yandex", "direct", "cli", "api", "advertising"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "orjson",
    "requests",
    "tapi-wrapper2",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "tabulate>=0.8.0",
    "colorama>=0.4.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-recording>=0.13",
    "vcrpy>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.8",
    "ruff>=0.1",
    "requests>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "types-setuptools",
    "types-tabulate",
]

[project.scripts]
direct = "direct_cli.cli:cli"
direct-cli = "direct_cli._deprecated:deprecated_main"

[project.urls]
Homepage = "https://github.com/axisrow/direct-cli"
Repository = "https://github.com/axisrow/direct-cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["direct_cli*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
exclude = ["direct_cli/_vendor"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_implicit_optional = false
exclude = [
    "direct_cli/_vendor/",
    "scripts/",
    "tests/",
]
disable_error_code = [
    "assignment",
    "arg-type",
    "attr-defined",
    "import-untyped",
    "index",
    "list-item",
    "misc",
    "no-redef",
    "truthy-function",
    "var-annotated",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests requiring a real API token (deselect with '-m \"not integration\"')",
    "integration_write: sandbox integration tests for write commands (replays VCR cassettes offline; --record-mode=rewrite needs YANDEX_DIRECT_TOKEN)",
    "integration_live_write: manual production API write tests limited to disposable draft resources (requires YANDEX_DIRECT_TOKEN and YANDEX_DIRECT_LIVE_WRITE=1)",
    "v4_live_read: manual read-only v4 Live tests (requires YANDEX_DIRECT_TOKEN and YANDEX_DIRECT_LOGIN)",
    "sandbox_limitation(reason, category): test skipped due to known Yandex Direct sandbox API limitation (not a CLI bug). category is optional: 'disabled' = supported in live but disabled/broken in sandbox (codes 8800/1000/5004); 'unsupported' = resource type architecturally missing from sandbox (code 3500)",
    "api_coverage: marks tests verifying CLI coverage against Yandex API WSDL (cached, no network required)",
]
